# ke-toan

./: .gitignore  CMakeLists.txt  DATABASE_SCHEMA_TEMPLATE.md  FORM_DESIGN_SPECIFICATION.md  KeToanApp.sln  KeToanApp.vcxproj  KeToanApp.vcxproj.filters  Kho_data.accdb  Kho_data.laccdb  MIGRATION_PLAN.md  README.md  clean_vs_cache.bat  clean_vs_cache.ps1  extract_pdf_schema.py  ketnoi_ketoan.accdb
KeToanApp/include/KeToanApp/: Common.h  Types.h
KeToanApp/src/: main.cpp
KeToanApp/src/Core/: Application.cpp  Application.h  Config.cpp  Config.h
KeToanApp/src/Database/: Connection.cpp  Connection.h  DatabaseManager.cpp  DatabaseManager.h  QueryBuilder.cpp  QueryBuilder.h
KeToanApp/src/UI/: MainWindow.cpp  MainWindow.h
KeToanApp/src/UI/Windows/: AccountForm.cpp  AccountForm.h  CustomerForm.cpp  CustomerForm.h  ProductForm.cpp  ProductForm.h  ProductGroupForm.cpp  ProductGroupForm.h  SupplierForm.cpp  SupplierForm.h  WarehouseForm.cpp  WarehouseForm.h
KeToanApp/src/Utils/: DateTimeHelper.cpp  DateTimeHelper.h  Logger.cpp  Logger.h  StringHelper.cpp  StringHelper.h
resources/config/: config.ini
